--- a/vela-templates/addons/auto-gen/keda.yaml
+++ b/vela-templates/addons/auto-gen/keda.yaml
@@ -11,36 +11,10 @@ spec:
       components:
       - name: keda
         properties:
-          apiVersion: helm.toolkit.fluxcd.io/v2beta1
-          kind: HelmRelease
-          metadata:
-            name: keda
-            namespace: keda
-          spec:
-            chart:
-              spec:
-                chart: keda
-                interval: 1m
-                sourceRef:
-                  kind: HelmRepository
-                  name: kedacore
-                  namespace: keda
-                version: 2.3.2
-            interval: 5m
-            values:
-              replicaCount: 1
-        type: raw
-      - name: kedacore
-        properties:
-          apiVersion: source.toolkit.fluxcd.io/v1beta1
-          kind: HelmRepository
-          metadata:
-            name: kedacore
-            namespace: keda
-          spec:
-            interval: 1m
-            url: https://kedacore.github.io/charts
-        type: raw
+          chart: keda
+          repo_url: https://kedacore.github.io/charts
+          source_type: HelmRepo
+        type: helm-release
     status:
       rollout:
         batchRollingState: ""
