--- a/vela-templates/addons/prometheus/template.yaml
+++ b/vela-templates/addons/prometheus/template.yaml
@@ -15,11 +15,12 @@ spec:
   appTemplate:
     spec:
       components:
-{{  range .ResourceFiles  }}
-        - name: {{ .Name }}
-          type: raw
+        - name: prometheus
+          type: helm-release
           properties:
-{{ .Content | indent 12 }} {{ end }}
+            source_type: HelmRepo
+            repo_url: https://prometheus-community.github.io/helm-charts
+            chart: premetheus
 {{  range .DefinitionFiles  }}
         - name: {{ .Name }}
           type: raw
