--- a/vela-templates/addons/terraform/template.yaml
+++ b/vela-templates/addons/terraform/template.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       components:
         - name: terraform-controller
-          type: helm-release
+          type: helm
           properties:
             source_type: GitRepo
             repo_url: https://github.com/oam-dev/terraform-controller
