--- a/charts/vela-core/templates/addons/kruise.yaml
+++ b/charts/vela-core/templates/addons/kruise.yaml
@@ -18,7 +18,7 @@ data:
               chart: ./charts/kruise/v0.9.0
               repo_url: https://github.com/openkruise/kruise
               source_type: GitRepo
-            type: helm-release
+            type: helm
         status:
           rollout:
             batchRollingState: ""
