--- a/charts/vela-core/templates/addons/prometheus.yaml
+++ b/charts/vela-core/templates/addons/prometheus.yaml
@@ -17,7 +17,7 @@ data:
               chart: premetheus
               repo_url: https://prometheus-community.github.io/helm-charts
               source_type: HelmRepo
-            type: helm-release
+            type: helm
         status:
           rollout:
             batchRollingState: ""
