--- a/charts/vela-core/templates/addons/terraform.yaml
+++ b/charts/vela-core/templates/addons/terraform.yaml
@@ -17,7 +17,7 @@ data:
               chart: ./chart
               repo_url: https://github.com/oam-dev/terraform-controller
               source_type: GitRepo
-            type: helm-release
+            type: helm
           - name: terraform-system
             properties:
               apiVersion: v1
