--- a/vela-templates/addons/auto-gen/keda.yaml
+++ b/vela-templates/addons/auto-gen/keda.yaml
@@ -14,7 +14,7 @@ spec:
           chart: keda
           repo_url: https://kedacore.github.io/charts
           source_type: HelmRepo
-        type: helm-release
+        type: helm
     status:
       rollout:
         batchRollingState: ""
