--- a/vela-templates/addons/auto-gen/prometheus.yaml
+++ b/vela-templates/addons/auto-gen/prometheus.yaml
@@ -14,7 +14,7 @@ spec:
           chart: premetheus
           repo_url: https://prometheus-community.github.io/helm-charts
           source_type: HelmRepo
-        type: helm-release
+        type: helm
     status:
       rollout:
         batchRollingState: ""
