--- a/vela-templates/addons/fluxcd/definitions/helm-release.yaml
+++ b/vela-templates/addons/fluxcd/definitions/helm-release.yaml
@@ -1,7 +1,7 @@
 apiVersion: core.oam.dev/v1beta1
 kind: ComponentDefinition
 metadata:
-  name: helm-release
+  name: helm
   namespace: vela-system
   annotations:
     definition.oam.dev/description: "helm release is a group of K8s resources from either git repository or helm repo"
@@ -16,20 +16,20 @@ spec:
         	metadata: {
         		name: context.name
         	}
-        	if parameter.source_type == "GitRepo" {
+        	if parameter.repoType == "git" {
         		kind: "GitRepository"
         		spec: {
-        			url: parameter.repo_url
+        			url: parameter.repoUrl
         			ref:
         				branch: parameter.branch
-        			interval: parameter.pull_interval
+        			interval: parameter.pullInterval
         		}
         	}
-        	if parameter.source_type == "HelmRepo" {
+        	if parameter.repoType == "helm" {
         		kind: "HelmRepository"
         		spec: {
-        			interval: parameter.pull_interval
-        			url:      parameter.repo_url
+        			interval: parameter.pullInterval
+        			url:      parameter.repoUrl
         		}
         	}
         }
@@ -41,37 +41,35 @@ spec:
         		name: context.name
         	}
         	spec: {
-        		interval: parameter.pull_interval
+        		interval: parameter.pullInterval
         		chart: {
         			spec: {
         				chart: parameter.chart
         				sourceRef: {
-        					if parameter.source_type == "GitRepo" {
+        					if parameter.repoType == "git" {
         						kind: "GitRepository"
         					}
-        					if parameter.source_type == "HelmRepo" {
+        					if parameter.repoType == "helm" {
         						kind: "HelmRepository"
         					}
         					name:      context.name
         					namespace: context.namespace
         				}
-        				interval: parameter.pull_interval
+        				interval: parameter.pullInterval
         			}
         		}
         	}
         }
 
         parameter: {
-        	source_type: "GitRepo" | "HelmRepo"
+        	repoType: "git" | "helm"
         	//+usage=The Git or Helm repository URL, accept HTTP/S or SSH address as git url.
-        	repo_url: string
+        	repoUrl: string
         	//+usage=The interval at which to check for repository and relese updates.
-        	pull_interval: *"5m" | string
+        	pullInterval: *"5m" | string
         	//+usage=1.The relative path to helm chart for git source. 2. chart name for helm resource
         	chart: string
-        	if source_type == "GitRepo" {
-        		//+usage=The Git reference to checkout and monitor for changes, defaults to master branch.
-        		branch: *"master" | string
-        	}
+            //+usage=The Git reference to checkout and monitor for changes, defaults to master branch.
+            branch: *"master" | string
         }
 
