--- a/vela-templates/addons/fluxcd/definitions/kustomize.yaml
+++ b/vela-templates/addons/fluxcd/definitions/kustomize.yaml
@@ -18,8 +18,8 @@ spec:
         		name: context.name
         	}
         	spec: {
-        		interval: parameter.pull_interval
-        		url:      parameter.repo_url
+        		interval: parameter.pullInterval
+        		url:      parameter.repoUrl
         		ref: branch: parameter.branch
         	}
         }
@@ -30,7 +30,7 @@ spec:
         		name: context.name
         	}
         	spec: {
-        		interval: parameter.pull_interval
+        		interval: parameter.pullInterval
         		sourceRef: {
         			kind: "GitRepository"
         			name: context.name
@@ -42,9 +42,9 @@ spec:
         }
         parameter: {
         	//+usage=The repository URL, can be a HTTP/S or SSH address.
-        	repo_url: string
+        	repoUrl: string
         	//+usage=The interval at which to check for repository updates.
-        	pull_interval: *"1m" | string
+        	pullInterval: *"1m" | string
         	//+usage=The Git reference to checkout and monitor for changes, defaults to master branch.
         	branch: *"master" | string
         	//+usage=Path to the directory containing the kustomization.yaml file, or the set of plain YAMLs a kustomization.yaml should be generated for.
