--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_applications.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_applications.yaml
@@ -964,6 +964,9 @@ spec:
                 items:
                   description: ApplicationComponent describe the component of application
                   properties:
+                    externalRevision:
+                      description: ExternalRevision specified the component revisionName
+                      type: string
                     name:
                       type: string
                     properties:
