--- a/charts/vela-core/templates/addons/keda.yaml
+++ b/charts/vela-core/templates/addons/keda.yaml
@@ -15,8 +15,8 @@ data:
           - name: keda
             properties:
               chart: keda
-              repo_url: https://kedacore.github.io/charts
-              source_type: HelmRepo
+              repoUrl: https://kedacore.github.io/charts
+              repoType: helm
             type: helm
         status:
           rollout:
