--- a/charts/vela-core/templates/addons/terraform.yaml
+++ b/charts/vela-core/templates/addons/terraform.yaml
@@ -15,8 +15,8 @@ data:
           - name: terraform-controller
             properties:
               chart: ./chart
-              repo_url: https://github.com/oam-dev/terraform-controller
-              source_type: GitRepo
+              repoUrl: https://github.com/oam-dev/terraform-controller
+              repoType: git
             type: helm
           - name: terraform-system
             properties:
