--- a/vela-templates/addons/keda/template.yaml
+++ b/vela-templates/addons/keda/template.yaml
@@ -18,8 +18,8 @@ spec:
         - name: keda
           type: helm
           properties:
-            source_type: HelmRepo
-            repo_url: https://kedacore.github.io/charts
+            repoType: helm
+            repoUrl: https://kedacore.github.io/charts
             chart: keda
 {{  range .DefinitionFiles  }}
         - name: {{ .Name }}
