--- a/vela-templates/addons/prometheus/template.yaml
+++ b/vela-templates/addons/prometheus/template.yaml
@@ -18,8 +18,8 @@ spec:
         - name: prometheus
           type: helm
           properties:
-            source_type: HelmRepo
-            repo_url: https://prometheus-community.github.io/helm-charts
+            repoType: helm
+            repoUrl: https://prometheus-community.github.io/helm-charts
             chart: premetheus
 {{  range .DefinitionFiles  }}
         - name: {{ .Name }}
