--- a/charts/vela-core/templates/addons/keda.yaml
+++ b/charts/vela-core/templates/addons/keda.yaml
@@ -7,43 +7,17 @@ data:
       annotations:
         addons.oam.dev/description: KEDA is a Kubernetes-based Event Driven Autoscaler.
       name: keda
-      namespace: keda
+      namespace: vela-system
     spec:
       appTemplate:
         spec:
           components:
           - name: keda
             properties:
-              apiVersion: helm.toolkit.fluxcd.io/v2beta1
-              kind: HelmRelease
-              metadata:
-                name: keda
-                namespace: keda
-              spec:
-                chart:
-                  spec:
-                    chart: keda
-                    interval: 1m
-                    sourceRef:
-                      kind: HelmRepository
-                      name: kedacore
-                      namespace: keda
-                    version: 2.3.2
-                interval: 5m
-                values:
-                  replicaCount: 1
-            type: raw
-          - name: kedacore
-            properties:
-              apiVersion: source.toolkit.fluxcd.io/v1beta1
-              kind: HelmRepository
-              metadata:
-                name: kedacore
-                namespace: keda
-              spec:
-                interval: 1m
-                url: https://kedacore.github.io/charts
-            type: raw
+              chart: keda
+              repoType: helm
+              repoUrl: https://kedacore.github.io/charts
+            type: helm
         status:
           rollout:
             batchRollingState: ""
@@ -57,7 +31,7 @@ data:
           apiVersion: core.oam.dev/v1beta1
           kind: Initializer
           name: fluxcd
-          namespace: flux-system
+          namespace: vela-system
     status:
       observedGeneration: 0
 kind: ConfigMap
