--- a/vela-templates/addons/auto-gen/prometheus.yaml
+++ b/vela-templates/addons/auto-gen/prometheus.yaml
@@ -1,50 +1,20 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: prometheus
-spec: {}
-status: {}
----
 apiVersion: core.oam.dev/v1beta1
 kind: Initializer
 metadata:
   annotations:
     addons.oam.dev/description: Prometheus is an open-source systems monitoring and alerting toolkit
   name: prometheus
-  namespace: prometheus
+  namespace: vela-system
 spec:
   appTemplate:
     spec:
       components:
       - name: prometheus
         properties:
-          apiVersion: helm.toolkit.fluxcd.io/v2beta1
-          kind: HelmRelease
-          metadata:
-            name: prometheus
-            namespace: prometheus
-          spec:
-            chart:
-              spec:
-                chart: premetheus
-                interval: 1pm
-                sourceRef:
-                  kind: HelmRepository
-                  name: prometheus-community
-                  namespace: premetheus
-            interval: 5m
-        type: raw
-      - name: prometheus-community
-        properties:
-          apiVersion: source.toolkit.fluxcd.io/v1beta1
-          kind: HelmRepository
-          metadata:
-            name: prometheus-community
-            namespace: prometheus
-          spec:
-            interval: 1m
-            url: https://prometheus-community.github.io/helm-charts
-        type: raw
+          chart: premetheus
+          repoType: helm
+          repoUrl: https://prometheus-community.github.io/helm-charts
+        type: helm
     status:
       rollout:
         batchRollingState: ""
@@ -58,6 +28,6 @@ spec:
       apiVersion: core.oam.dev/v1beta1
       kind: Initializer
       name: fluxcd
-      namespace: flux-system
+      namespace: vela-system
 status:
   observedGeneration: 0
