--- a/vela-templates/addons/kruise/template.yaml
+++ b/vela-templates/addons/kruise/template.yaml
@@ -14,8 +14,11 @@ spec:
         namespace: vela-system
   appTemplate:
     spec:
-      components: {{  range .ResourceFiles  }}
-        - name: {{ .Name }}
-          type: raw
+      components:
+        - name: kruise
+          type: helm
           properties:
-{{ .Content | indent 12 }} {{ end }}
+            repoType: git
+            repoUrl: https://github.com/openkruise/kruise
+            chart: ./charts/kruise/v0.9.0
+            branch: master
