--- a/vela-templates/addons/terraform/template.yaml
+++ b/vela-templates/addons/terraform/template.yaml
@@ -14,7 +14,19 @@ spec:
         namespace: vela-system
   appTemplate:
     spec:
-      components: {{  range .ResourceFiles  }}
+      components:
+        - name: terraform-controller
+          type: helm
+          properties:
+            repoType: git
+            repoUrl: https://github.com/oam-dev/terraform-controller
+            chart: ./chart
+{{  range .ResourceFiles  }}
+        - name: {{ .Name }}
+          type: raw
+          properties:
+{{ .Content | indent 12 }} {{ end }}
+{{  range .DefinitionFiles  }}
         - name: {{ .Name }}
           type: raw
           properties:
