--- a/legacy/charts/vela-core-legacy/crds/standard.oam.dev_podspecworkloads.yaml
+++ b/legacy/charts/vela-core-legacy/crds/standard.oam.dev_podspecworkloads.yaml
@@ -5,6 +5,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.2.4
+  creationTimestamp: null
   name: podspecworkloads.standard.oam.dev
 spec:
   group: standard.oam.dev
