--- a/.github/workflows/e2e-rollout-test.yml
+++ b/.github/workflows/e2e-rollout-test.yml
@@ -1,4 +1,4 @@
-name: E2E Test
+name: E2E Rollout Test
 
 on:
   push:
@@ -83,6 +83,9 @@ jobs:
       - name: Wait for e2e preparation ready
         run: |
           timeout 60 bash -c 'while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' localhost:38081/api/components)" != "200" ]]; do sleep 5; done' || false
+
+      - name: Run api e2e tests
+        run: make e2e-api-test
 
       - name: Run e2e tests
         run: make e2e-rollout-test
