Update Terraform typed Componentdefinition
As Terraform alicloud provider has upgrade to 1.26.0, some
HCL synatx have to been updated

--- a/docs/examples/terraform/cloud-resource-provision-and-consume/ComponentDefinition-alibaba-rds.yaml
+++ b/docs/examples/terraform/cloud-resource-provision-and-consume/ComponentDefinition-alibaba-rds.yaml
@@ -48,12 +48,12 @@ spec:
 
         variable "account_name" {
           description = "RDS instance user account name"
-          type = "string"
+          type = string
           default = "oam"
         }
 
         variable "password" {
           description = "RDS instance account password"
-          type = "string"
+          type = string
           default = "Xyfff83jfewGGfaked"
         }
