--- a/vela-templates/addons/fluxcd/definitions/helm-release.yaml
+++ b/vela-templates/addons/fluxcd/definitions/helm-release.yaml
@@ -30,6 +30,11 @@ spec:
         		spec: {
         			interval: parameter.pullInterval
         			url:      parameter.repoUrl
+        			if parameter.secretRef != _|_ {
+        				secretRef: {
+        					name: parameter.secretRef
+        				}
+        			}
         		}
         	}
         }
@@ -63,13 +68,14 @@ spec:
 
         parameter: {
         	repoType: "git" | "helm"
-        	//+usage=The Git or Helm repository URL, accept HTTP/S or SSH address as git url.
+        	// +usage=The Git or Helm repository URL, accept HTTP/S or SSH address as git url.
         	repoUrl: string
-        	//+usage=The interval at which to check for repository and relese updates.
+        	// +usage=The interval at which to check for repository and relese updates.
         	pullInterval: *"5m" | string
-        	//+usage=1.The relative path to helm chart for git source. 2. chart name for helm resource
+        	// +usage=1.The relative path to helm chart for git source. 2. chart name for helm resource
         	chart: string
-            //+usage=The Git reference to checkout and monitor for changes, defaults to master branch.
+            // +usage=The Git reference to checkout and monitor for changes, defaults to master branch.
             branch: *"master" | string
+            // +usage=The name of the secret containing authentication credentials for the Helm repository.
+        	secretRef?: string
         }
-
