patch env configuration

--- a/charts/vela-core/crds/core.oam.dev_definitionrevisions.yaml
+++ b/charts/vela-core/crds/core.oam.dev_definitionrevisions.yaml
@@ -15,7 +15,7 @@ spec:
     listKind: DefinitionRevisionList
     plural: definitionrevisions
     shortNames:
-    - comprev
+    - defrev
     singular: definitionrevision
   scope: Namespaced
   versions:
