--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_definitionrevisions.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_definitionrevisions.yaml
@@ -25,7 +25,7 @@ spec:
     listKind: DefinitionRevisionList
     plural: definitionrevisions
     shortNames:
-    - comprev
+    - defrev
     singular: definitionrevision
   scope: Namespaced
   subresources: {}
