--- a/charts/vela-core/crds/core.oam.dev_definitionrevisions.yaml
+++ b/charts/vela-core/crds/core.oam.dev_definitionrevisions.yaml
@@ -476,6 +476,9 @@ spec:
                         description: Extension is used for extension needs by OAM platform builders
                         type: object
                         x-kubernetes-preserve-unknown-fields: true
+                      manageWorkload:
+                        description: ManageWorkload defines the trait would be responsible for creating the workload
+                        type: boolean
                       podDisruptive:
                         description: PodDisruptive specifies whether using the trait will cause the pod to restart or not.
                         type: boolean
