--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_applicationrevisions.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_applicationrevisions.yaml
@@ -1872,6 +1872,11 @@ spec:
                 type: object
                 
                 
+              compWorkloadManageByTrait:
+                description: CompWorkloadManageByTrait indicate witch component's workload managed by trait
+                items:
+                  type: string
+                type: array
               componentDefinitions:
                 additionalProperties:
                   description: ComponentDefinition is the Schema for the componentdefinitions API
