mechanism let application skip apply the workload (#1963)
* add manageby trait option

* add comments

* fix comments

* fix dryrun test

* add checkfunc in assemble phase

fix lint

--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_applicationrevisions.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_applicationrevisions.yaml
@@ -2296,6 +2296,9 @@ spec:
                           description: Extension is used for extension needs by OAM platform builders
                           type: object
                           
+                        manageWorkload:
+                          description: ManageWorkload defines the trait would be responsible for creating the workload
+                          type: boolean
                         podDisruptive:
                           description: PodDisruptive specifies whether using the trait will cause the pod to restart or not.
                           type: boolean
