--- a/vela-templates/addons/auto-gen/fluxcd.yaml
+++ b/vela-templates/addons/auto-gen/fluxcd.yaml
@@ -4155,13 +4155,6 @@ spec:
                 - emptyDir: {}
                   name: tmp
         type: raw
-      - name: flux-system
-        properties:
-          apiVersion: v1
-          kind: Namespace
-          metadata:
-            name: flux-system
-        type: raw
       - name: allow-egress
         properties:
           apiVersion: networking.k8s.io/v1
@@ -4513,5 +4506,11 @@ spec:
         rollingState: ""
         upgradedReadyReplicas: 0
         upgradedReplicas: 0
+  dependsOn:
+  - ref:
+      apiVersion: core.oam.dev/v1beta1
+      kind: Initializer
+      name: ns-flux-system
+      namespace: vela-system
 status:
   observedGeneration: 0
