--- a/docs/examples/workflow/app.yaml
+++ b/docs/examples/workflow/app.yaml
@@ -18,7 +18,7 @@ spec:
           name: "firstApp"
         outputs:
           - name: server1Ip
-            exportKey: "myIp"
+            exportKey: "myIP"
       - name: deploy-server2
         type: apply
         inputs:
