--- a/charts/vela-core/crds/core.oam.dev_envbindings.yaml
+++ b/charts/vela-core/crds/core.oam.dev_envbindings.yaml
@@ -29,7 +29,7 @@ spec:
     - jsonPath: .metadata.creationTimestamp
       name: AGE
       type: date
-    name: v1beta1
+    name: v1alpha1
     schema:
       openAPIV3Schema:
         description: EnvBinding is the Schema for the EnvBinding API
