--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_envbindings.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_envbindings.yaml
@@ -183,9 +183,9 @@ spec:
               type: string
           type: object
       type: object
-  version: v1beta1
+  version: v1alpha1
   versions:
-  - name: v1beta1
+  - name: v1alpha1
     served: true
     storage: true
 status:
