--- a/docs/examples/workflow/definition.yaml
+++ b/docs/examples/workflow/definition.yaml
@@ -11,7 +11,6 @@ spec:
            component: string
            name: string
            prefixIP?: string
-           myIp?: string
         }
 
         // load component from application
@@ -34,13 +33,7 @@ spec:
         }
 
         // export podIP
-        if parameter.myIp!=_|_{
-            export: op.#Export & {
-                type: "var"
-                path: parameter.myIp
-                value: apply.status.podIP
-            }
-        }
+        myIP: apply.status.podIP
 ---
 apiVersion: core.oam.dev/v1beta1
 kind: ComponentDefinition
