--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_manualscalertraits.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_manualscalertraits.yaml
@@ -20,13 +20,18 @@ spec:
     status: {}
   validation:
     openAPIV3Schema:
-      description: A ManualScalerTrait determines how many replicas a workload should have.
+      description: A ManualScalerTrait determines how many replicas a workload should
+        have.
       properties:
         apiVersion:
-          description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+          description: 'APIVersion defines the versioned schema of this representation
+            of an object. Servers should convert recognized schemas to the latest
+            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
           type: string
         kind:
-          description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+          description: 'Kind is a string value representing the REST resource this
+            object represents. Servers may infer this from the endpoint the client
+            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
           type: string
         metadata:
           type: object
@@ -44,7 +49,17 @@ spec:
                   description: API version of the referent.
                   type: string
                 fieldPath:
-                  description: 'If referring to a piece of an object instead of an entire object, this string should contain a valid JSON/Go field access statement, such as desiredState.manifest.containers[2]. For example, if the object reference is to a container within a pod, this would take on a value like: "spec.containers{name}" (where "name" refers to the name of the container that triggered the event) or if no container name is specified "spec.containers[2]" (container with index 2 in this pod). This syntax is chosen only to have some well-defined way of referencing a part of an object. TODO: this design is not final and this field is subject to change in the future.'
+                  description: 'If referring to a piece of an object instead of an
+                    entire object, this string should contain a valid JSON/Go field
+                    access statement, such as desiredState.manifest.containers[2].
+                    For example, if the object reference is to a container within
+                    a pod, this would take on a value like: "spec.containers{name}"
+                    (where "name" refers to the name of the container that triggered
+                    the event) or if no container name is specified "spec.containers[2]"
+                    (container with index 2 in this pod). This syntax is chosen only
+                    to have some well-defined way of referencing a part of an object.
+                    TODO: this design is not final and this field is subject to change
+                    in the future.'
                   type: string
                 kind:
                   description: 'Kind of the referent. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
@@ -56,7 +71,8 @@ spec:
                   description: 'Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/'
                   type: string
                 resourceVersion:
-                  description: 'Specific resourceVersion to which this reference is made, if any. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency'
+                  description: 'Specific resourceVersion to which this reference is
+                    made, if any. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency'
                   type: string
                 uid:
                   description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
@@ -67,7 +83,8 @@ spec:
           - workloadRef
           type: object
         status:
-          description: A ManualScalerTraitStatus represents the observed state of a ManualScalerTrait.
+          description: A ManualScalerTraitStatus represents the observed state of
+            a ManualScalerTrait.
           properties:
             conditions:
               description: Conditions of the resource.
@@ -75,20 +92,25 @@ spec:
                 description: A Condition that may apply to a resource.
                 properties:
                   lastTransitionTime:
-                    description: LastTransitionTime is the last time this condition transitioned from one status to another.
+                    description: LastTransitionTime is the last time this condition
+                      transitioned from one status to another.
                     format: date-time
                     type: string
                   message:
-                    description: A Message containing details about this condition's last transition from one status to another, if any.
+                    description: A Message containing details about this condition's
+                      last transition from one status to another, if any.
                     type: string
                   reason:
-                    description: A Reason for this condition's last transition from one status to another.
+                    description: A Reason for this condition's last transition from
+                      one status to another.
                     type: string
                   status:
-                    description: Status of this condition; is it currently True, False, or Unknown?
+                    description: Status of this condition; is it currently True, False,
+                      or Unknown?
                     type: string
                   type:
-                    description: Type of this condition. At most one of each condition type may apply to a resource at any point in time.
+                    description: Type of this condition. At most one of each condition
+                      type may apply to a resource at any point in time.
                     type: string
                 required:
                 - lastTransitionTime
