--- a/vela-templates/addons/auto-gen/kruise.yaml
+++ b/vela-templates/addons/auto-gen/kruise.yaml
@@ -2,7 +2,8 @@ apiVersion: core.oam.dev/v1beta1
 kind: Initializer
 metadata:
   annotations:
-    addons.oam.dev/description: Kruise is a Kubernetes extended suite for application automations
+    addons.oam.dev/description: Kruise is a Kubernetes extended suite for application
+      automations
   name: kruise
   namespace: vela-system
 spec:
