--- a/vela-templates/addons/auto-gen/prometheus.yaml
+++ b/vela-templates/addons/auto-gen/prometheus.yaml
@@ -2,7 +2,8 @@ apiVersion: core.oam.dev/v1beta1
 kind: Initializer
 metadata:
   annotations:
-    addons.oam.dev/description: Prometheus is an open-source systems monitoring and alerting toolkit
+    addons.oam.dev/description: Prometheus is an open-source systems monitoring and
+      alerting toolkit
   name: prometheus
   namespace: vela-system
 spec:
