--- a/vela-templates/addons/auto-gen/terraform.yaml
+++ b/vela-templates/addons/auto-gen/terraform.yaml
@@ -2,7 +2,8 @@ apiVersion: core.oam.dev/v1beta1
 kind: Initializer
 metadata:
   annotations:
-    addons.oam.dev/description: Terraform Controller is a Kubernetes Controller for Terraform.
+    addons.oam.dev/description: Terraform Controller is a Kubernetes Controller for
+      Terraform.
   name: terraform
   namespace: vela-system
 spec:
